force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/sf_devops__Test_Suite_Assignment__c.object-meta.xml
<CustomObject>
    <label>Test Suite Assignment</label>
    <nameField>
        <displayFormat>MTS-{000000}</displayFormat>
        <label>Test Suite Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Suite Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>