force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/fields/sf_devops__Enable_Quality_Gate__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Enable_Quality_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Quality Gate</label>
    <type>Checkbox</type>
</CustomField>