force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Test Suite Assignments</relationshipLabel>
    <relationshipName>Test_Suite_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>