force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/fields/sf_devops__Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite__c</fullName>
    <label>Test Suite</label>
    <referenceTo>sf_devops__Test_Suite__c</referenceTo>
    <relationshipLabel>Test Suite Assignments</relationshipLabel>
    <relationshipName>Test_Suite_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>