force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/validationRules/sf_devops__PreventFieldEditAfterCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__PreventFieldEditAfterCreation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
(ISCHANGED( sf_devops__Pipeline_Stage__c ) ||
 ISCHANGED( sf_devops__Test_Suite__c ) ||
 ISCHANGED( sf_devops__Project__c ) ||
 ISCHANGED( sf_devops__Event__c ))</errorConditionFormula>
    <errorMessage>Field not editable</errorMessage>
</ValidationRule>