force-app/main/default/objects/sf_devops__Test_Suite_Assignment__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Pipeline_Stage__c</columns>
    <columns>sf_devops__Project__c</columns>
    <columns>sf_devops__Test_Suite__c</columns>
    <columns>sf_devops__Event__c</columns>
    <columns>sf_devops__Enable_Quality_Gate__c</columns>
    <columns>sf_devops__Quality_Gate_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>